--- a/Sources/content/download/1708.md
+++ b/Sources/content/download/1708.md
@@ -7,10 +7,10 @@ Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download
 Download_github_Checksum = "e6381815ef31d784a47f8f501ee11d30d3d08de9"
 Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.08/namib-1708_x86_64.iso.sig"
 Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.08/namib-1708_x86_64.iso.torrent"
-Name = "17.08"
+Name = "Mate 17.08"
 Screenshot = "1708-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "official" ]
+Tags = [ "mate" ]
 TargetGroup = "The first version of Namib GNU/Linux"
 Thumbnail = "1708.png"
 Version = "17.08"
