--- a/Sources/content/download/1711.md
+++ b/Sources/content/download/1711.md
@@ -7,10 +7,10 @@ Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download
 Download_github_Checksum = "9f5ca4fadd3b77e86cf6c0728b2840dd97e0bb91"
 Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.11/namib-1711_x86_64.iso.sig"
 Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.11/namib-1711_x86_64.iso.torrent"
-Name = "17.11"
+Name = "Mate 17.11"
 Screenshot = "1711-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "official" ]
+Tags = [ "mate" ]
 TargetGroup = "The third version of Namib GNU/Linux"
 Thumbnail = "1711.png"
 Version = "17.11"
