--- a/Sources/content/download/1709.md
+++ b/Sources/content/download/1709.md
@@ -7,10 +7,10 @@ Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download
 Download_github_Checksum = "785700156f65016e6c405ec59fce650970aa5216"
 Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.09/namib-1709_x86_64.iso.sig"
 Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.09/namib-1709_x86_64.iso.torrent"
-Name = "17.09"
+Name = "Mate 17.09"
 Screenshot = "1709-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "official" ]
+Tags = [ "mate" ]
 TargetGroup = "The second version of Namib GNU/Linux"
 Thumbnail = "1709.png"
 Version = "17.09"
