Fix download page and add shadow

--- a/Sources/content/download/1711.md
+++ b/Sources/content/download/1711.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Mate 17.11"
 Screenshot = "1711-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "mate" ]
+Tags = [ "older" ]
 TargetGroup = "The third version of Namib GNU/Linux"
 Thumbnail = "1711.png"
 Version = "17.11"
