--- a/Sources/content/download/k1802.md
+++ b/Sources/content/download/k1802.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Kde 18.02"
 Screenshot = "k1802-full.png"
 ShortDescription = "This edition of Namib comes with Kde."
-Tags = [ "kde" ]
+Tags = [ "lastest" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "k1802.png"
 Version = "18.02"
