--- a/Sources/content/download/m1802.md
+++ b/Sources/content/download/m1802.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Mate 18.02"
 Screenshot = "m1802-full.png"
 ShortDescription = "This edition of Namib comes with Mate."
-Tags = [ "mate" ]
+Tags = [ "lastest" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "m1802.png"
 Version = "18.02"
