--- a/Sources/content/download/1708.md
+++ b/Sources/content/download/1708.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Mate 17.08"
 Screenshot = "1708-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "mate" ]
+Tags = [ "older" ]
 TargetGroup = "The first version of Namib GNU/Linux"
 Thumbnail = "1708.png"
 Version = "17.08"
