--- a/Sources/content/download/1709.md
+++ b/Sources/content/download/1709.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Mate 17.09"
 Screenshot = "1709-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
-Tags = [ "mate" ]
+Tags = [ "older" ]
 TargetGroup = "The second version of Namib GNU/Linux"
 Thumbnail = "1709.png"
 Version = "17.09"
