--- a/Sources/content/download/g1802.md
+++ b/Sources/content/download/g1802.md
@@ -10,7 +10,7 @@ Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/
 Name = "Gnome 18.02"
 Screenshot = "g1802-full.png"
 ShortDescription = "This edition of Namib comes with Gnome."
-Tags = [ "gnome" ]
+Tags = [ "lastest" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "g1802.png"
 Version = "18.02"
