--- a/Sources/content/download/1709.md
+++ b/Sources/content/download/1709.md
@@ -3,10 +3,10 @@ Download_sourceforge = "https://sourceforge.net/projects/namib-gnu-linux/files/r
 Download_sourceforge_Checksum = "785700156f65016e6c405ec59fce650970aa5216"
 Download_sourceforge_Sig = "https://sourceforge.net/projects/namib-gnu-linux/files/release/17.09/namib-1709_x86_64.iso.sig"
 Download_sourceforge_Torrent = "https://sourceforge.net/projects/namib-gnu-linux/files/release/17.09/namib-1709_x86_64.iso.torrent"
-Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.09/namib-1709_x86_64.iso"
-Download_github_Checksum = "785700156f65016e6c405ec59fce650970aa5216"
-Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.09/namib-1709_x86_64.iso.sig"
-Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/17.09/namib-1709_x86_64.iso.torrent"
+Download_osdn = "https://osdn.net/projects/namib-gnu-linux/storage/release/17.09/namib-1709_x86_64.iso"
+Download_osdn_Checksum = "785700156f65016e6c405ec59fce650970aa5216"
+Download_osdn_Sig = "https://osdn.net/projects/namib-gnu-linux/storage/release/17.09/namib-1709_x86_64.iso.sig"
+Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/release/17.09/namib-1709_x86_64.iso.torrent"
 Name = "Mate 17.09"
 Screenshot = "1709-full.png"
 ShortDescription = "This edition is supported by the Mate Developers and comes with Mate, a desktop environment that continues the legacy of traditional user experience while carefully improving and modernizing it when needed."
