--- a/Sources/content/download/k1802.md
+++ b/Sources/content/download/k1802.md
@@ -3,14 +3,14 @@ Download_sourceforge = "https://sourceforge.net/projects/namib-gnu-linux/files/r
 Download_sourceforge_Checksum = "722886daccf2b85cc0cfd8348baee62a32bdb85d"
 Download_sourceforge_Sig = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Kde/namib-kde-1802_x86_64.iso.sig"
 Download_sourceforge_Torrent = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Kde/namib-kde-1802_x86_64.iso.torrent"
-Download_github = ""
-Download_github_Checksum = "722886daccf2b85cc0cfd8348baee62a32bdb85d"
-Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-kde-1802_x86_64.iso.sig"
-Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-kde-1802_x86_64.iso.torrent"
+Download_osdn = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Kde/namib-kde-1802_x86_64.iso"
+Download_osdn_Checksum = "722886daccf2b85cc0cfd8348baee62a32bdb85d"
+Download_osdn_Sig = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Kde/namib-kde-1802_x86_64.iso.sig"
+Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Kde/namib-kde-1802_x86_64.iso.torrent"
 Name = "Kde 18.02"
 Screenshot = "k1802-full.png"
 ShortDescription = "This edition of Namib comes with Kde."
-Tags = [ "lastest" ]
+Tags = [ "older" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "k1802.png"
 Version = "18.02"
