--- a/Sources/content/download/m1802.md
+++ b/Sources/content/download/m1802.md
@@ -3,14 +3,14 @@ Download_sourceforge = "https://sourceforge.net/projects/namib-gnu-linux/files/r
 Download_sourceforge_Checksum = "415078122e05b323cad33ba8cfb4239f48d97e13"
 Download_sourceforge_Sig = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Mate/namib-mate-1802_x86_64.iso.sig"
 Download_sourceforge_Torrent = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Mate/namib-mate-1802_x86_64.iso.torrent"
-Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-mate-1802_x86_64.iso"
-Download_github_Checksum = "415078122e05b323cad33ba8cfb4239f48d97e13"
-Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-mate-1802_x86_64.iso.sig"
-Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-mate-1802_x86_64.iso.torrent"
+Download_osdn = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Mate/namib-mate-1802_x86_64.iso"
+Download_osdn_Checksum = "415078122e05b323cad33ba8cfb4239f48d97e13"
+Download_osdn_Sig = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Mate/namib-mate-1802_x86_64.iso.sig"
+Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Mate/namib-mate-1802_x86_64.iso.torrent"
 Name = "Mate 18.02"
 Screenshot = "m1802-full.png"
 ShortDescription = "This edition of Namib comes with Mate."
-Tags = [ "lastest" ]
+Tags = [ "older" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "m1802.png"
 Version = "18.02"
