--- a/Sources/content/download/x1802.md
+++ b/Sources/content/download/x1802.md
@@ -3,14 +3,14 @@ Download_sourceforge = "https://sourceforge.net/projects/namib-gnu-linux/files/r
 Download_sourceforge_Checksum = "9eb936d7fff4f952c3a47d6c70adbb305463b05a"
 Download_sourceforge_Sig = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Xfce/namib-xfce-1802_x86_64.iso.sig"
 Download_sourceforge_Torrent = "https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Xfce/namib-xfce-1802_x86_64.iso.torrent"
-Download_github = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-xfce-1802_x86_64.iso"
-Download_github_Checksum = "9eb936d7fff4f952c3a47d6c70adbb305463b05a"
-Download_github_Sig = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-xfce-1802_x86_64.iso.sig"
-Download_github_Torrent = "https://github.com/MeerkatBrowser/Namib-ISO/releases/download/18.02/namib-xfce-1802_x86_64.iso.torrent"
+Download_osdn = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Xfce/namib-xfce-1802_x86_64.iso"
+Download_osdn_Checksum = "9eb936d7fff4f952c3a47d6c70adbb305463b05a"
+Download_osdn_Sig = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Xfce/namib-xfce-1802_x86_64.iso.sig"
+Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Xfce/namib-xfce-1802_x86_64.iso.torrent"
 Name = "Xfce 18.02"
 Screenshot = "x1802-full.png"
 ShortDescription = "This edition of Namib comes with Xfce."
-Tags = [ "lastest" ]
+Tags = [ "older" ]
 TargetGroup = "The version 18.02 of Namib GNU/Linux"
 Thumbnail = "x1802.png"
 Version = "18.02"
