--- a/Sources/content/download/b1808.md
+++ b/Sources/content/download/b1808.md
@@ -10,7 +10,7 @@ Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/relea
 Name = "Budgie 18.08"
 Screenshot = "b1808-full.png"
 ShortDescription = "This edition of Namib comes with Budgie."
-Tags = [ "lastest" ]
+Tags = [ "older" ]
 TargetGroup = "The version 18.08 of Namib GNU/Linux"
 Thumbnail = "b1808.png"
 Version = "18.08"
