--- a/Sources/content/download/g1808.md
+++ b/Sources/content/download/g1808.md
@@ -10,7 +10,7 @@ Download_osdn_Torrent = "https://osdn.net/projects/namib-gnu-linux/storage/relea
 Name = "Gnome 18.08"
 Screenshot = "g1808-full.png"
 ShortDescription = "This edition of Namib comes with Gnome."
-Tags = [ "lastest" ]
+Tags = [ "older" ]
 TargetGroup = "The version 18.08 of Namib GNU/Linux"
 Thumbnail = "g1808.png"
 Version = "18.08"
